fixed character section scrollbar + same size on character section and calendar section

--- a/almofus-front/src/components/pages/almanax-page/almanax-calendar/almanax-calendar.module.css
+++ b/almofus-front/src/components/pages/almanax-page/almanax-calendar/almanax-calendar.module.css
@@ -1,8 +1,8 @@
 .almanaxCalendarContainer {
-  display: flex;
+    display: flex;
 
-  width: 10rem;
-  height: 10rem;
+    width: 100%;
+    height: 100%;
 
-  background-color: #fff;
+    background-color: var(--primary-light);
 }
