--- a/almofus-front/src/components/pages/almanax-page/character-section/add-character-button.module.css
+++ b/almofus-front/src/components/pages/almanax-page/character-section/add-character-button.module.css
@@ -1,8 +1,14 @@
 .addImage {
-  height: 2rem;
-  width: 2rem;
+    height: 2rem;
+    width: 2rem;
 }
 
-.createCharacterButton {
-  border-radius: 0.5rem 0 0 0;
+.addCharacterButtonContainer {
+    display: flex;
+    border-right: 2px solid var(--primary-darker);
+
+    .createCharacterButton {
+        border-radius: 0.5rem 0 0 0;
+        width: 100%;
+    }
 }
